# text-analysis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
data/: text0.txt  text1.txt  text2.txt  text3.txt  text4.txt
src/: alphabet_counter.cpp  alphabet_counter.h  chaining.cpp  chaining.h  conjunctions_counter.cpp  conjunctions_counter.h  count_combinations.cpp  count_combinations.h  find_common_words.cpp  find_common_words.h  interjections_counter.cpp  interjections_counter.h  lengths.h  letter_stats.cpp  letter_stats.h  main.cpp  methods.h  particles_counter.cpp  particles_counter.h  prepositions_counter.cpp  prepositions_counter.h  sentence_length_counter.cpp  sentence_length_counter.h  three_by_three_letters_stats.cpp  three_by_three_letters_stats.h  three_letters_in_a_row.cpp  three_letters_in_a_row.h  three_letters_stats.cpp  three_letters_stats.h  three_letters_stats_test.h  three_vowels_in_a_row.cpp  three_vowels_in_a_row.h  utils.cpp  utils.h  voiced_deaf.cpp  voiced_deaf.h  vowels.cpp  vowels.h  words_counter.cpp  words_counter.h  (+2 more)
tests/: CMakeLists.txt  alphabet_test.cpp  chaining_test.cpp  combinations_test.cpp  common_words_test.cpp  conjunctions_counter_test.cpp  interjections_counter_test.cpp  letter_stats_test.cpp  particles_counter_test.cpp  prepositions_counter_test.cpp  sentence_length_counter_test.cpp  three_by_three_letters_stats_test.cpp  three_letters_stats_test.cpp  three_letters_test.cpp  three_vowels_in_a_row_test.cpp  utils_test.cpp  words_length_counter_test.cpp
